syntax = "proto3";

package mixturka;

option go_package = "../src/infrastructure/grpc";

service Mixturka {
  // GetRecipes retrieves a list of all recipes
  rpc GetRecipes(GetRecipesRequest) returns (GetRecipesResponse) {}

  // BrewPot starts the brewing process with the specified ingredients.
  rpc BrewPot(PotBrewRequest) returns (PotBrewResponse) {}
}

// Request to get recipes
message GetRecipesRequest {}

// Response for getting recipes
message GetRecipesResponse {
  repeated Recipe recipes = 1;
}

// Recipe definition
message Recipe {
  int64 id = 1;
  string name = 2;
  repeated Ingredient ingredients = 3;
}

// Ingredient definition
message Ingredient {
  int64 id = 1;
  string name = 2;
  int32 quantity = 3;
}

// Request to start brewing
message PotBrewRequest {
  repeated Ingredient ingredients = 1; // List of ingredients for brewing
}

// Response for brewing process
message PotBrewResponse {
  bool started = 1; // Indicates if brewing started successfully
  Error error = 2; // Error details, if any
}

// Error message for gRPC responses
message Error {
  int32 code = 1; // Error code
  string message = 2; // Human-readable error description
  map<string, string> data = 3; // Arbitrary additional error-related data
}